Removed animation, fixed images not showing up when under 1200px width

--- a/web/app/static/styles.css
+++ b/web/app/static/styles.css
@@ -142,10 +142,7 @@ img{
 }
 
 @media (max-width: 1200px) {
-    .project {
-        flex-direction: column;
-    }
-    .project:nth-child(odd) {
+    .project, .project:nth-child(4n) {
         flex-direction: column;
     }
     .project-image {
